syntax = "proto3";

package retriever.v1;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/retriever/v1";

service Manager {
  rpc StartRetrieve (StartRetrieveRequest) returns (StartRetrieveResponse) {}
  rpc StatRetrieve (StatRetrieveRequest) returns (StatRetrieveResponse) {}
}

message Retrieve {
    string ChainType = 10;
    string ChainID   = 20;
    string Contract  = 30;
    string TokenID   = 40;
    string RetrieveState = 50;
    string ProposalID = 60;
    uint64 DealID     = 70;
    string BackupPayloadCID = 80;
}

message StartRetrieveRequest {
    string ChainType = 10;
    string ChainID   = 20;
    string Contract  = 30;
    string TokenID   = 40;
}

message StartRetrieveResponse {
    Retrieve Info = 10;
}

message StatRetrieveRequest {
    string ChainType = 10;
    string ChainID   = 20;
    string Contract  = 30;
    string TokenID   = 40;
}

message StatRetrieveResponse {
    Retrieve Info = 10;
}
